--- a/src/unimakte/config/tasks.yaml
+++ b/src/unimakte/config/tasks.yaml
@@ -1,17 +1,19 @@
-research_task:
-  description: >
-    Conduct a thorough research about {topic}
-    Make sure you find any interesting and relevant information given
-    the current year is {current_year}.
-  expected_output: >
-    A list with 10 bullet points of the most relevant information about {topic}
-  agent: researcher
+generate_notes:
+  description: "Organize the provided raw class notes into well-structured and readable summaries."
+  expected_output: "A detailed and clean summary of the raw notes."
+  agent: note_organizer
 
-reporting_task:
-  description: >
-    Review the context you got and expand each topic into a full section for a report.
-    Make sure the report is detailed and contains any and all relevant information.
-  expected_output: >
-    A fully fledged report with the main topics, each with a full section of information.
-    Formatted as markdown without '```'
-  agent: reporting_analyst
+assist_study:
+  description: "Help explain a difficult topic to a student, breaking it down into simple language."
+  expected_output: "A detailed explanation in plain and simple words."
+  agent: study_assistant
+
+create_content:
+  description: "Generate multiple-choice questions and flashcards based on a topic."
+  expected_output: "A list of 5 MCQs and 5 flashcards."
+  agent: content_generator
+
+manage_tasks:
+  description: "Oversee and manage the workflow by assigning tasks to agents and ensuring goals are met."
+  expected_output: "A plan describing which agent will do what."
+  agent: task_manager
