--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.10,<3.13"
 dependencies = [
         "crewai>=0.119.0",
         "google-generativeai>=0.8.5",
+        "python-dotenv>=1.1.0",
+        "pyyaml>=6.0.2",
 ]
 [project.scripts]
 unimate = "unimakte.unimate:uni_mate"
